[package]
name = "voxel-tiler-cli"
version = "0.1.0"
authors = ["azishio"]
edition = "2021"
description = "A CLI tool to convert point clouds into voxel mesh data in Ply format."

readme = "README.md"

license = "MIT OR Apache-2.0"

homepage = "https://crates.io/crates/voxel-tiler-cli"
repository = "https://github.com/azishio/voxel-tiler-cli"

keywords = ["voxel", "point-cloud", "ply", "las", "laz"]
categories = ["science::geo", "command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
bunt = "0.2.8"
clap = { version = "4.5.4", features = ["derive"] }
coordinate-transformer = "1.7.0"
inquire = "0.7.5"
voxel-tiler-core = { version = "0.2", features = ["default", "las", "laz"] }
regex = "1.10.4"
las = { version = "0.8.7", features = ["laz"] }
laz = "0.9.1"
tabled = "0.15.0"
